# ecommerce_agent

./: .env.example  .gitignore  Procfile  README.md  product_spec.md  pyproject.toml  render.yaml  requirements.txt
eval/: RUBRIC.md  prompts.json
src/shopping_search_agent/: __init__.py  agent.py  budget_currency.py  chat_app.py  config.py  constraint_negation.py  decision_summary.py  eval_checks.py  eval_runner.py  event_db.py  event_tracking.py  explanation.py  immersive.py  intent_parser.py  limits.py  llm.py  main.py  market.py  metrics_report.py  models.py  parse_policy.py  preference_transparency.py  public_response.py  query_generator.py  query_metrics.py  ranking.py  relevance_filter.py  retailer_preference.py  retry.py  router.py  search.py  serpapi_client.py  stock_checker.py  trendyol_search.py
tests/: test_chat_app.py  test_chat_app_day13.py  test_decision_summary.py  test_metrics.py  test_preference_transparency.py  test_router.py  test_search_resilience.py  test_serpapi_client.py
